@@ -1,3 +1,7 @@
+2002-09-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/tuplet-engraver.cc (try_music): Compile kludge.
+
 2002-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* lily/*.cc: specify accepts for many engravers.
